# penguin-the-adventure

./: .gitignore  CMakeLists.txt  Food.cpp  Food.h  Obstracles.cpp  Obstracles.h  Penquin.cpp  Penquin.h  README.md  controller.cpp  controller.h  lighting.cpp  lighting.h  main.cpp  scene.cpp  scene.h
images/animated_penquin/: penquin_000045.mtl
